--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,14 @@
 /public/hot
 /public/storage
 /storage/*.key
+/storage/app/public
+/storage/debugbar
+/storage/framework/*
+/storage/framework/cache/data
+/storage/framework/sessions
+/storage/framework/testing
+/storage/framework/views
+/storage/logs
 /vendor
 .env
 .env.backup
